--- a/doc/Rakefile
+++ b/doc/Rakefile
@@ -21,8 +21,41 @@ task :build_exe do
 
   if platform == 'win'
     buildExe
-    Dir.chdir('tools')
-    buildExe
+    
+    Dir.chdir('search')
+    
+    setup_file = <<END
+      from distutils.core import setup
+      import py2exe
+
+      includes = ["encodings", "encodings.*"]
+      options = {"py2exe":
+                  {   "compressed": 1,
+                      "optimize": 2,
+                      "includes": includes,
+                      "bundle_files": 1
+                  }
+                }
+      setup(   
+          version = "0.0.1",
+          description = "search",
+          name = "search",
+          options = options,
+          zipfile=None,
+          console=["search.py"]
+          # console=[{"script": "search.py", "icon_resources": [(1, "search.ico")] }] 
+          )
+END
+    
+    File.open('setup.py', 'w')
+    File.puts setup_file
+    File.close
+    
+    system('python setup.py py2exe')
+    system('del search.exe')
+    system('mv dist\\search.exe .')
+    system('rmdir build /S /Q')
+    system('rmdir dist /S /Q')
   else
     puts 'must run in MS-Windows'
   end
