--- a/doc/Rakefile
+++ b/doc/Rakefile
@@ -1,4 +1,5 @@
 require "lib/base"
+require 'fileutils'
 
 task :default => [:build]
 
@@ -24,7 +25,7 @@ task :build_exe do
     
     Dir.chdir('search')
     
-    setup_file = <<END
+    setup_file = %q{
       from distutils.core import setup
       import py2exe
 
@@ -45,17 +46,18 @@ task :build_exe do
           console=["search.py"]
           # console=[{"script": "search.py", "icon_resources": [(1, "search.ico")] }] 
           )
-END
+      }.gsub(/^\s*/,'')
     
-    File.open('setup.py', 'w')
-    File.puts setup_file
-    File.close
+    output = File.open('setup.py', 'w')
+    output.puts setup_file
+    output.close
     
-    system('python setup.py py2exe')
-    system('del search.exe')
-    system('mv dist\\search.exe .')
-    system('rmdir build /S /Q')
-    system('rmdir dist /S /Q')
+    system("python setup.py py2exe")
+    FileUtils.mv('dist/search.exe', 'search.exe')
+    FileUtils.rm_rf('build')
+    FileUtils.rm_rf('dist')
+    FileUtils.rm_rf('setup.py')
+
   else
     puts 'must run in MS-Windows'
   end
